about time i fixed the drop animation on mobile :)

--- a/agservers/index.css
+++ b/agservers/index.css
@@ -41,7 +41,6 @@ body{
 
 .nav-links {
     display: flex;
-    animation: drop 1.5s ease;
     
 }
 
@@ -68,7 +67,6 @@ nav {
     align-items: center;
     min-height: 8vh;
     background-color: #23272a;
-    animation: drop 1.5s ease;
 }
 .nav-links {
     justify-content: space-around;
@@ -160,6 +158,16 @@ nav {
 
 .nav-active{
 	transform: translateX(0%);
+}
+
+@media screen and (min-width:961px) {
+	.nav{
+		animation: drop 1.5s ease;
+	}
+
+	.nav-links{
+		animation: drop 1.5s ease;
+	}
 }
 
 @keyframes navLinkFade{
