--- a/blog/index.css
+++ b/blog/index.css
@@ -20,7 +20,6 @@ body{
 
 .nav-links {
     display: flex;
-    animation: drop 1.5s ease;
     
 }
 
@@ -47,7 +46,6 @@ nav {
     align-items: center;
     min-height: 8vh;
     background-color: #23272a;
-    animation: drop 1.5s ease;
 }
 .nav-links {
     justify-content: space-around;
@@ -135,6 +133,16 @@ nav {
 		display: block;
 		cursor: pointer;
 		
+	}
+}
+
+@media screen and (min-width:961px) {
+	.nav{
+		animation: drop 1.5s ease;
+	}
+
+	.nav-links{
+		animation: drop 1.5s ease;
 	}
 }
 
