--- a/home/index.css
+++ b/home/index.css
@@ -42,9 +42,7 @@ body{
 }
 
 .nav-links {
-    display: flex;
-    animation: drop 1.5s ease;
-    
+    display: flex;    
 }
 
 .burger{
@@ -74,7 +72,6 @@ nav {
     align-items: center;
     min-height: 8vh;
     background-color: #23272a;
-    animation: drop 1.5s ease;
 }
 .nav-links {
     justify-content: space-around;
@@ -127,6 +124,16 @@ nav {
 		display: block;
 		cursor: pointer;
 		
+	}
+}
+
+@media screen and (min-width:961px) {
+	.nav{
+		animation: drop 1.5s ease;
+	}
+
+	.nav-links{
+		animation: drop 1.5s ease;
 	}
 }
 
